aws/terraform/sg.tf
resource "aws_security_group" "allow_ssh_http" {
  name        = "allow_ssh_http_website"
  description = "Security Group para permitir SSH e HTTP"

  # Permitir acesso SSH na porta 22 de qualquer lugar
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Permitir acesso HTTP na porta 80 de qualquer lugar
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Permitir tráfego de saída (default)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # Todos os protocolos
    cidr_blocks = ["0.0.0.0/0"]
  }
}
